bugfix:total credits, layout shift

--- a/Frontend/src/components/userdetails/UserDetails.css
+++ b/Frontend/src/components/userdetails/UserDetails.css
@@ -1,5 +1,5 @@
 .userdetails-container {
-  margin: 40px 0 40px 575px;
+  margin: 40px 25%;
   width: 800px;
   display: flex;
   flex-direction: column;
